# landing_sim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  TODO.txt  landing_estimation.lyx
include/: estimator.h  estimator_utils.h  landing_estimator.h  logger.h  measurement_models.h  uav_estimator.h
include/ekf/: ekf.h  ekf_sim.h  gnss.h  image_feat.h  logger.h  meas.h  state.h  yaml.h
include/landing_sim/: static_vehicle.h  unicycle_vehicle.h  utils.h
jacobians/: aruco_trans_meas_jacobians.py  err_state_pos_meas_jacobians.py  landing_ekf_jacobians.py  pixel_meas_jacobians.py  quat.py  uav_ekf_jacobians.py
notes/: estimator_with_biases.tex  landing_veh_estimator.tex  library.bib  macros.tex  root.tex  uav_estimator.tex
params/: basic_sim_params.yaml  estimator_params.yaml  sim_params.yaml  unicycle_params.yaml
params/ekf/: ekf.yaml  sim_params.yaml
params/landing_est/: estimator_params.yaml  sim_params.yaml
params/uav_est/: sim_params.yaml
scripts/: plot_landing_est_results.py  plot_mc_results.py  plot_new_results.py  plot_results.py  plot_single_mc_result.py  plot_uav_est_results.py  true_rotations.py
src/: basic_example.cpp  estimator.cpp  estimator_example.cpp  estimator_utils.cpp  landing_estimator.cpp  landing_estimator_example.cpp  measurement_models.cpp  new_estimator_example.cpp  new_estimator_mc.cpp  test_estimator_utils.cpp  test_measurements.cpp  uav_estimator.cpp  uav_estimator_example.cpp
src/ekf/: dynamics.cpp  ekf.cpp  ekf_sim.cpp  log.cpp  meas.cpp  state.cpp
